// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRadioGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiRadioGroup props idSelected is rendered 1`] = `
<div>
  <div
    class="euiRadio euiRadioGroup__item"
  >
    <input
      checked=""
      class="euiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="euiRadio__circle"
    >
      <div
        class="euiRadio__check"
      />
    </div>
    <label
      class="euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item"
  >
    <input
      class="euiRadio__input"
      id="2"
      type="radio"
    />
    <div
      class="euiRadio__circle"
    >
      <div
        class="euiRadio__check"
      />
    </div>
    <label
      class="euiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`EuiRadioGroup props options are rendered 1`] = `
<div>
  <div
    class="euiRadio euiRadioGroup__item"
  >
    <input
      class="euiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="euiRadio__circle"
    >
      <div
        class="euiRadio__check"
      />
    </div>
    <label
      class="euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item"
  >
    <input
      class="euiRadio__input"
      id="2"
      type="radio"
    />
    <div
      class="euiRadio__circle"
    >
      <div
        class="euiRadio__check"
      />
    </div>
    <label
      class="euiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;
